# math-conjecturer

./: README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
papers/2401.07852/: arxiv_revision_1_19_24.tex  macros.sty  packages.sty
papers/2411.13062/: Part_I.bbl  Part_I.tex
papers/2512.01868/: alphaabbr.bst  arxiv.tex  biblioICM.bib  commandes.tex  rawtext.tex
papers/2601.07943/: main.bbl  main.tex
papers/2601.08983/: main.bbl  main.tex
papers/2601.09204/: 00README.json  RM_eigenvalue_Chiral0112.tex
papers/2601.09485/: 00README.json  Ai_Pelekis_Hyp.tex
papers/2601.09646/: 00README.json  classical_v3.tex
papers/2601.09704/: 00README.json  Index_of_notations.tex  Introduction.tex  Preliminaries.tex  Proof_of_the_alternating_case.tex  Proof_of_the_symmetric_case.tex  The_cokernel_of_an_alternating_matrix_and_its_torsion_subgroup.tex  The_non_sparse_assumptions.tex  The_symmetric_pairing_on_the_cokernel_of_a_nonsingular_symmetric_matrix.tex  main.bbl  main.tex  preamble.tex  references.bib
papers/2601.10624/: bibliography.bib  header.tex  main.tex
papers/2601.11133/: ConcentrationWasserstein.bbl  ConcentrationWasserstein.tex
papers/2601.11162/: conditioning_core.tex  conditioning_hal.tex
papers/2601.11470/: bibliography.bib  main.tex
papers/2601.16726/: 00README.json  Manuscript.tex
src/: .gitignore  app.py  chainlit.md  run_workflow.py
src/.chainlit/: config.toml
src/agents/: agents.py  agents_copy.py  schema.py  workflow.py
src/api/: __init__.py  main.py  models.py  sse.py
(+94 files in other folders)
