[project]
name = "math-conjecturer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.3.1",
    "chainlit>=2.9.3",
    "chromadb>=1.3.4",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "jupyterlab>=4.4.10",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-google-genai>=3.0.3",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "langsmith>=0.4.43",
    "pydantic==2.9.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "sse-starlette>=2.1.0",
    "uvicorn>=0.32.0",
]
